# GenePy

./: index.html  pyproject.toml  setup.py
genepy/mutations/: __init__.py
