[tool.poetry]
name = "genepy"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
bokeh = "^3.0.3"
colorcet = "^3.0.1"
firecloud-dalmatian = "^0.0.18"
gsheets = "^0.6.1"
gspread = "^5.7.2"
matplotlib = "^3.6.3"
oauth2client = "^4.1.3"
pandas = "^1.5.3"
pyBigWig = "^0.3.18"
requests = "^2.28.2"
#scipy = "^1.10.0"
seaborn = "^0.12.2"
statsmodels = "^0.13.5"
venn = "^0.1.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
