[tool.poetry]
name = "genepy"
version = "0.1.0"
description = "depmap-omics dependencies"
authors = ["CDS-omics"]
readme = "README.md"
packages = [
    # { include = "genepy" },
    { include = "dalmatian"}
]

[tool.poetry.dependencies]
python = "^3.11"
bokeh = "2.4.2"
colorcet = "^3.0.1"
gsheets = "^0.6.1"
gspread = "^5.7.2"
matplotlib = "^3.6.3"
oauth2client = "^4.1.3"
pandas = "^1.5.3"
pyBigWig = "^0.3.18"
requests = "^2.28.2"
seaborn = "^0.12.2"
statsmodels = "^0.13.5"
venn = "^0.1.3"
xmltodict = "^0.13.0"
biomart = "^0.9.2"
firecloud = "^0.16.35"
iso8601 = "^1.1.0"
agutil = "^5.0.1"
hound = "^1.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
